@@ -1,3 +1,9 @@
+2009-03-20  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+
+	* src/mb/hd-comp-mgr.c:
+	  Little cleanup: name things by their proper name and rename
+	  HdCompMgrClientPrivate::portrait_supported to portrait_not_supported.
+
 2009-03-20  Gordon Williams <gordon.williams@collabora.co.uk>
 
         * src/home/hd-title-bar.c: Ensured that the progress indicator is at
